fixed gaps around footer and jumbotron on homepage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -131,6 +131,10 @@
   100% { -webkit-transform: matrix3d(2, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(2, 0, 0, 0, 0, 2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
 }
 
+div.jumbotron {
+  margin: 0;
+}
+
 /*end of Jumbotron icon style*/
 
 .navbar-brand {
